Add packages to prevent build fail on clean vagrant environment
Signed-off-by: Aristo Chen <aristo.chen@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -199,10 +199,12 @@ build-packages:
     - device-tree-compiler
     - flex
     - gcc-aarch64-linux-gnu
+    - g++-aarch64-linux-gnu
     - libxml2-dev
     - libssl-dev
     - python3
     - python3-crypto
+    - python3-pip
     - python3-pyelftools
     - python3-pycryptodome
     - wget
