xtest needs to access the path of plugins for test case 1033
Signed-off-by: Aristo Chen <aristo.chen@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,6 +21,9 @@ environment:
 layout:
     /usr/lib/optee_armtz:
         bind: $SNAP_COMMON/lib/optee_armtz
+    /usr/lib/tee-supplicant/plugins:
+        bind: $SNAP_COMMON/usr/lib/tee-supplicant/plugins
+
 apps:
     xtest:
         command: bin/wrapper xtest
