Fix missing replacement for tee-supplicant

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -182,7 +182,7 @@ parts:
                 fi
             elif [ "\$cmd" == "tee-supplicant" ]
             then
-               tee-supplicant --fs-parent-path /var/lib/snapd/save/snap/\$SNAP_INSTANCE_NAME/optee-fs --ta-dir \$SNAP_COMMON/lib/optee_armtz --plugin-path \$SNAP_COMMON/usr/lib/tee-supplicant/plugins
+               "\$cmd" --fs-parent-path /var/lib/snapd/save/snap/\$SNAP_INSTANCE_NAME/optee-fs --ta-dir \$SNAP_COMMON/lib/optee_armtz --plugin-path \$SNAP_COMMON/usr/lib/tee-supplicant/plugins
             elif [ "\$cmd" == "sign-ta" ]
             then
                 for ta in \$SNAP/tmp/unsigned_elf/*
